chore: add Numerical Optimization Methods

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 Introduction to Machine Learning with Python/ diff=no
 Modern Computational Physics I/ diff=no
+Numerical Optimization Methods/ diff=no
